--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,95 @@
 altair==5.5.0
+asgiref==3.8.1
+asttokens==3.0.0
 attrs==25.4.0
 blinker==1.9.0
 cachetools==6.2.1
-certifi==2025.10.5
-charset-normalizer==3.4.4
+cashfree-pg-sdk-python==2.0.1
+cashfree_sdk==0.1.3
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.3.0
 colorama==0.4.6
-contourpy==1.3.3
+comm==0.2.2
+comtypes==1.4.12
+contourpy==1.3.0
 cycler==0.12.1
-fonttools==4.60.1
+debugpy==1.8.12
+decorator==5.1.1
+distlib==0.3.9
+Django==5.1.6
+executing==2.2.0
+filelock==3.17.0
+filetype==1.2.0
+fonttools==4.54.1
 gitdb==4.0.12
 GitPython==3.1.45
-idna==3.11
+idna==3.7
+ipykernel==6.29.5
+ipython==8.31.0
+jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.5.2
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
-kiwisolver==1.4.9
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.7
 MarkupSafe==3.0.3
-matplotlib==3.10.7
-narwhals==2.10.2
-numpy==2.3.4
-packaging==25.0
-pandas==2.3.3
-pillow==12.0.0
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+narwhals==2.11.0
+nest-asyncio==1.6.0
+numpy==2.1.3
+opencv-python-headless==4.10.0.84
+packaging==24.1
+pandas==2.2.3
+parso==0.8.4
+pem==23.1.0
+pillow==11.0.0
+platformdirs==4.3.6
+plotly==6.5.0
+prompt_toolkit==3.0.50
 protobuf==6.33.0
+psutil==6.1.1
+pure_eval==0.2.3
 pyarrow==21.0.0
+pycryptodome==3.21.0
 pydeck==0.9.1
-pyparsing==3.2.5
+Pygments==2.19.1
+pyjokes==0.8.3
+pyparsing==3.2.0
+pypiwin32==223
 python-dateutil==2.9.0.post0
-pytz==2025.2
+python-dotenv==1.0.1
+pyttsx3==2.99
+pytube==15.0.0
+pytz==2025.1
+pywin32==308
+PyYAML==6.0.2
+pyzmq==26.2.0
 referencing==0.37.0
-requests==2.32.5
+requests==2.32.3
+requests-toolbelt==1.0.0
+roboflow==1.1.49
 rpds-py==0.28.0
 scikit-learn==1.7.2
 scipy==1.16.3
 seaborn==0.13.2
-six==1.17.0
+six==1.16.0
 smmap==5.0.2
+sqlparse==0.5.3
+stack-data==0.6.3
 streamlit==1.51.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 toml==0.10.2
-tornado==6.5.2
+tornado==6.4.2
+tqdm==4.67.0
+traitlets==5.14.3
 typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
+tzdata==2025.1
+urllib3==2.2.3
+virtualenv==20.29.2
 watchdog==6.0.0
+wcwidth==0.2.13
