--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,7 @@ parso==0.8.4
 pem==23.1.0
 pillow==11.0.0
 platformdirs==4.3.6
-plotly==6.5.0
+plotly
 prompt_toolkit==3.0.50
 protobuf==6.33.0
 psutil==6.1.1
